deploy/portfolio-manifest/02-portfolio-dep.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: portfolio
  name: portfolio
  namespace: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
      - image: ejirolaureld/profile-demo:2
        name: portfolio
        ports:
        - containerPort: 80
          name: portfolio
