deploy/portfolio-manifest/03-portfolio-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: portfolio
  name: portfolio
  namespace: portfolio
spec:
  type: ClusterIP
  ports:
  - name: "portfolio"
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: portfolio
