deploy/portfolio-manifest/05-db-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db
  name: db
  namespace: portfolio
spec:
  type: ClusterIP
  ports:
  - name: "db-service"
    port: 5432
    targetPort: 5432
  selector:
    app: db
