deploy/portfolio-manifest/05-portfolio-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  namespace: portfolio
  annotations:
     cert-manager.io/cluster-issuer: letsencrypt-dnsi
     kubernetes.io/ingress.className: "nginx"
spec:
  ingressClassName: nginx
  tls: 
    - hosts: 
        - "portfolio.ejirolaureld.me"
      secretName: wildcard-cert
  rules:
    - host: "portfolio.ejirolaureld.me"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio
                port:
                  number: 80
